change entry in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
   <div id="app">
 
   </div>
-  <script type="module" src="/moduleJS/main.js"></script>
+  <!-- <script type="module" src="/moduleJS/main.js"></script> -->
+  <script src="./dist/main.js"></script>
 </body>
 
 </html>
